# findandseek-engine

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: test.yml
deploy/: findandseek.service
docs/: AGENT_GUIDE.md  COMPARISON.md  FOR_AGENTS.md
docs/benchmarks/: README.md  TOKEN_ECONOMICS_REPORT.md
docs/benchmarks/harness/: generation_savings_benchmark.py
docs/benchmarks/results/: threerun_uncapped.json
docs/benchmarks/transcripts/: v2_cross_campus_reconciliation_incumbent_run0.jsonl  v2_cross_campus_reconciliation_incumbent_run1.jsonl  v2_cross_campus_reconciliation_incumbent_run2.jsonl  v2_cross_campus_reconciliation_system_run0.jsonl  v2_cross_campus_reconciliation_system_run1.jsonl  v2_cross_campus_reconciliation_system_run2.jsonl  v2_full_program_audit_incumbent_run0.jsonl  v2_full_program_audit_incumbent_run1.jsonl  v2_full_program_audit_incumbent_run2.jsonl  v2_full_program_audit_system_run0.jsonl  v2_full_program_audit_system_run1.jsonl  v2_full_program_audit_system_run2.jsonl  v2_spring_glow_exec_summary_incumbent_run0.jsonl  v2_spring_glow_exec_summary_incumbent_run1.jsonl  v2_spring_glow_exec_summary_incumbent_run2.jsonl  v2_spring_glow_exec_summary_system_run0.jsonl  v2_spring_glow_exec_summary_system_run1.jsonl  v2_spring_glow_exec_summary_system_run2.jsonl
find_and_seek/: diagnostics.py  safe_log.py  setup_weights.py  sidecar.py
find_and_seek/api/: server.py
find_and_seek/config/: agent_mode.py  logging_setup.py  models.py  power_settings.py  profiles.py  settings.py
find_and_seek/db/: connection.py  edits.py  facts_query.py  fts_repair.py  migrations.py  schema.sql  scope.py  store.py
find_and_seek/eval/: __init__.py  classify_eval.py  gold.jsonl  mcp_smoke.py  run_eval.py  search_recall_eval.py
find_and_seek/eval/reports/: README.md
find_and_seek/ingest/: card_guard.py  chunk.py  embed.py  embed_mlx.py  embed_ollama.py  facts.py  florence.py  model_manager.py  ner.py  power.py  refresh.py  sections.py  summarise.py  summarise_afm.py  summarise_mlx.py  summarise_ollama.py  summarise_vllm.py  vision_macos.py  vision_mlx.py  vision_tesseract.py  worker.py
find_and_seek/ingest/extract/: base.py  docx.py  email.py  guard.py  image.py  pdf.py  pptx.py  router.py  text.py  textutil_office.py  xlsx.py
find_and_seek/mcp/: beacon.py  server.py
find_and_seek/organize/: __init__.py  apply.py  categories.py  classify.py  finder_tags.py  journal.py  naming.py  plan_store.py  planner.py  precompute.py  preview.py  reclassify.py  settings.py  signals.py  tags.py  taxonomy.py  undo.py
find_and_seek/search/: expand.py  hybrid.py  judge_afm.py  rerank.py
find_and_seek/service/: __init__.py  launchd.py  supervisor.py
find_and_seek/watch/: exclusions.py  roots.py  scan.py  watcher.py
tests/: conftest.py  generate_corpus.py  test_card_guard.py  test_classify_confidence.py  test_corpus_synthetic.py  test_corruption.py  test_diagnostics.py  test_embed_load_lock.py  test_extract_structure.py  test_facts.py  test_finder_tags.py  test_folders_permission.py  test_improvements.py  test_low_ram.py  test_mcp_beacon.py  test_model_manager.py  test_organize.py  test_organize_safety.py  test_phases.py  test_plan_pruning.py  test_power_settings.py  test_scan.py  test_scope.py  test_sections.py  test_seed_roots.py  test_service.py  test_summary_edits.py  test_supervisor.py  test_watched_extensions.py  test_watcher_debounce.py  test_worker_power_and_size.py  test_worker_resilience.py
tools/ocr/: README.md  ocrtool  ocrtool.swift
